--- a/AppRiesgosPersonales/build.gradle
+++ b/AppRiesgosPersonales/build.gradle
@@ -3,14 +3,18 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" } // anhadido para usar sonarQube
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.2.2"
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1' // sonarQube
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
 
 plugins {
     id 'com.android.application' version '7.2.2' apply false
