--- a/AppRiesgosPersonales/build.gradle
+++ b/AppRiesgosPersonales/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2"
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1' // sonarQube
         // NOTE: Do not place your application dependencies here; they belong
