--- a/CIBELServiceSpring/src/main/resources/application.properties
+++ b/CIBELServiceSpring/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cibel_db
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=1736gjfchnsjd67fkjsdfD
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 #spring.jpa.show-sql: true
