--- a/CIBELAndroid/app/src/main/AndroidManifest.xml
+++ b/CIBELAndroid/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="es.unican.appriesgospersonales.fileprovider"
+            android:authorities="es.unican.cibel.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
